--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,10 +18,8 @@ body {
 }
 
 body {
-  display: flex;
   width: 100%;
   height: 100%;
-  flex-direction: column;
 }
 
 button,
@@ -45,7 +43,7 @@ button:focus {
 
 @layer base {
   :root {
-    /* --background: 0 0% 100%;
+    --background: 0 0% 100%;
     --foreground: 240 10% 3.9%;
 
     --card: 0 0% 100%;
@@ -53,9 +51,6 @@ button:focus {
 
     --popover: 0 0% 100%;
     --popover-foreground: 240 10% 3.9%;
-
-    --primary: 240 5.9% 10%;
-    --primary-foreground: 0 0% 98%;
 
     --secondary: 240 4.8% 95.9%;
     --secondary-foreground: 240 5.9% 10%;
@@ -73,7 +68,13 @@ button:focus {
     --input: 240 5.9% 90%;
     --ring: 240 10% 3.9%;
 
-    --radius: 0.5rem; */
+    --radius: 0.5rem;
+    --primary: 212 38% 17%; /* #1a2b3c */
+    --primary-foreground: 40 33% 94%; /* #f4f1eb */
+    --secondary: 40 33% 86%; /* #e6dac4 */
+    --primary-hex: #1a2b3c;
+    --secondary-hex: #e6dac4;
+    --text-secondary: #f4f1eb;
   }
 }
 
