feat: about-section

--- a/src/widgets/PromoBanner/PromoBanner.module.scss
+++ b/src/widgets/PromoBanner/PromoBanner.module.scss
@@ -7,6 +7,7 @@
   height: 100vh;
   background-color: var(--primary-hex);
   background-image: url('/assets/images/first-section-image.png');
+  background-repeat: no-repeat;
   padding: 32px;
 
   .content {
